# Concilia-o-Banc-ria-OFX

./: .gitignore  Ia.py  README.md  llm_IA.py  llm_finance.py  llm_groq.py  llm_groq_valor.py  pipeline.py  pyproject.toml
