[tool.poetry]
name = "parciamento-extrato"
version = "0.1.0"
description = ""
authors = ["Washington Vieira <wv817816@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pandas = "^2.2.3"
ofxparse = "^0.21"
langchain-groq = "^0.2.0"
python-dotenv = "^1.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
